preventing selection and zooming on mobile devices

--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@ body {
 	margin: 0;
 	overflow: hidden;
 	text-align: center;
+	touch-action: none;
+	-webkit-user-select: none; /* Safari */
+	-ms-user-select: none; /* IE 10+ and Edge */
+	user-select: none; /* Standard syntax */
 }
 
 a {
